# whisperX

./: .gitignore  pyproject.toml  speed_test.ps1  speed_test_v2.ps1
.github/workflows/: sync-fork.yml
whisperx/: alignment.py  schema.py  transcribe.py  utils.py
