[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperx"
version = "3.1.1"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torchaudio",
    "torch",
    "faster-whisper",
    "pyannote.audio",
    "pandas",
    "nltk"
]

[project.urls]
"Homepage" = "https://github.com/m-bain/whisperx"
"Bug Tracker" = "https://github.com/m-bain/whisperx/issues"

[project.scripts]
whisperx = "whisperx.transcribe:cli"
